fix hamburger menu visibility

--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ p {
     cursor: pointer;
 }
 
+.menu-icon {
+    display: none;
+}
+
 /* **** for all section **** */
 .section {
     width: 80vw;
